# Ermakov

./: .gitignore  CMakeLists.txt
05 Hello, User/: Hello_User.cpp
06 String copier/: String_copier.cpp
07 Binary search/: Binary_search.cpp
08 Prime number/: prime_number.cpp
09 Field of Wonder/: Wonder_field.cpp
12 Factorial/: factorial.cpp
13 Fibbonachi/: fibbonachi.cpp
14 Hanoi Tower/: hanoi.cpp
15 Some Fun Stuff/: fun_stuff.cpp
16 3D Matrix/: 3D Matrix.cpp
17 Neuron/: main.cpp  neuron.cpp  neuron.h
18 Swap/: swap.cpp
19 Sorting/: sorting.cpp
20 Rectangle Intersection/: main.cpp  rectangle.cpp  rectangle.h
21 Data Structure/: CStructure.h  FIFO.cpp  FIFO.h  LIFO.cpp  LIFO.h  Structure.h  main.cpp
21-22 Data Structure/: CStructure.h  FIFO.cpp  FIFO.h  LIFO.cpp  LIFO.h  main.cpp  templates.cpp
23 Sudoku Killer Assistant/: sudoku_killer_assistant.cpp
24 Debugger/: CPoint2D.cpp  CPoint2D.h  CSong.cpp  CSong.h  CToy.cpp  CToy.h  main.cpp
25 Store/: CMakeLists.txt  Cart.cpp  Cart.h  Customer.h  Dairy.h  Fruit.h  Item.h  Order.h  Stock.h  Store.h  Yogurt.h  goods.h  main.cpp
HelloWorld/: HelloWorld.sdf  HelloWorld.sln
HelloWorld/Debug/: HelloWorld.ilk
HelloWorld/HelloWorld/: HelloWorld.vcxproj  Source.cpp
HelloWorld/HelloWorld/Debug/: CL.read.1.tlog  CL.write.1.tlog  HelloWorld.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Slice/: Slice.sdf  Slice.sln
Slice/Slice/: Slice.vcxproj  Slice.vcxproj.filters  slice.cpp  slice.h
